packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__const_variable_declaration__    const x = {a : 5};    const y = x.a;    .snap
---
source: packages/llvm/src/tests/variable_declaration/const_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %x_ = alloca <{ double }>, align 8
  %"1" = getelementptr <{ double }>, <{ double }>* %x_, i32 1, i32 0
  store double 5.000000e+00, double* %"1", align 8
  %y_ = alloca double, align 8
  %"4" = getelementptr <{ double }>, <{ double }>* %x_, i32 1, i32 0
  %"2" = load double, double* %"4", align 8
  store double %"2", double* %y_, align 8
  ret void
}

